--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#2196F3</color>
 
-    <color name="blue">#043FD6</color>
+    <color name="blue">#2196F3</color>
     <color name="red">#FF001E</color>
     <color name="green">#00E61F</color>
     <color name="purple">#6903DD</color>
