--- a/app/src/main/res/layout/note_item_layout.xml
+++ b/app/src/main/res/layout/note_item_layout.xml
@@ -2,8 +2,9 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="185dp"
-    android:layout_height="185dp"
+    android:layout_width="160dp"
+    android:layout_height="wrap_content"
+    android:minHeight="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/default_dimen"
     android:id="@+id/cardView"
@@ -13,17 +14,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/big_dimen">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/default_dimen"
             android:id="@+id/item_title"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/main"
-            android:maxLength="20"
+            android:maxLength="10"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:layout_margin="@dimen/big_dimen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
